--- a/package.json
+++ b/package.json
@@ -5,12 +5,56 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "npx eslint -c .eslintrc.js 'projects/demo-app/**/*.ts' --fix",
     "prettier": "prettier --config .prettierrc.json --write src/**/*.ts"
   },
   "author": "“Vlad <“v.borsh.io@gmail.com”>",
   "license": "ISC",
+  "dependencies": {
+    "rxjs": "^6.5.5"
+  },
   "devDependencies": {
+    "@types/jasmine": "~3.3.8",
+    "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
+    "@typescript-eslint/eslint-plugin": "~2.28.0",
+    "@typescript-eslint/eslint-plugin-tslint": "~2.28.0",
+    "@typescript-eslint/parser": "~2.28.0",
+    "codelyzer": "~5.0.0",
+    "commitizen": "~4.0.4",
+    "conventional-changelog-cli": "~2.0.31",
+    "coveralls": "~3.0.13",
+    "cz-conventional-changelog": "~3.1.0",
+    "eslint": "~6.8.0",
+    "eslint-config-prettier": "~6.10.1",
+    "eslint-plugin-prettier": "~3.1.3",
+    "husky": "^4.2.5",
+    "jasmine-core": "~3.4.0",
+    "jasmine-spec-reporter": "~4.2.1",
+    "karma": "~4.1.0",
+    "karma-chrome-launcher": "~2.2.0",
+    "karma-coverage-istanbul-reporter": "~2.0.1",
+    "karma-jasmine": "~2.0.1",
+    "karma-jasmine-html-reporter": "~1.4.0",
+    "karma-mocha-reporter": "~2.2.5",
+    "lint-staged": "^10.1.7",
+    "ng-packagr": "^5.3.0",
     "prettier": "^2.0.5",
+    "protractor": "~5.4.0",
+    "standard-version": "~7.1.0",
+    "ts-node": "~7.0.0",
+    "tsickle": "^0.36.0",
+    "tslint": "^6.1.2",
     "typescript": "^3.8.3"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged --config ./lint-staged.config.js"
+    }
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
